{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 21,
  "lineage": "5423888a-c0e9-ac8c-4e84-1cd10f88888c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6c08572e-808d-4f00-8ffe-737498e52555/resourceGroups/rg-terraform-day1/providers/Microsoft.Network/networkSecurityGroups/nsg-day2",
            "location": "eastus",
            "name": "nsg-day2",
            "resource_group_name": "rg-terraform-day1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6c08572e-808d-4f00-8ffe-737498e52555/resourceGroups/rg-terraform-day1/providers/Microsoft.Network/networkSecurityGroups/nsg-day2/securityRules/allow-ssh",
            "name": "allow-ssh",
            "network_security_group_name": "nsg-day2",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-terraform-day1",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6c08572e-808d-4f00-8ffe-737498e52555/resourceGroups/rg-terraform-day1/providers/Microsoft.Network/virtualNetworks/vnet-day2/subnets/subnet-day2",
            "name": "subnet-day2",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-terraform-day1",
            "virtual_network_name": "vnet-day2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6c08572e-808d-4f00-8ffe-737498e52555/resourceGroups/rg-terraform-day1/providers/Microsoft.Network/virtualNetworks/vnet-day2/subnets/subnet-day2",
            "network_security_group_id": "/subscriptions/6c08572e-808d-4f00-8ffe-737498e52555/resourceGroups/rg-terraform-day1/providers/Microsoft.Network/networkSecurityGroups/nsg-day2",
            "subnet_id": "/subscriptions/6c08572e-808d-4f00-8ffe-737498e52555/resourceGroups/rg-terraform-day1/providers/Microsoft.Network/virtualNetworks/vnet-day2/subnets/subnet-day2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d341c12f-4683-4fa0-9a2f-1006fc21711e",
            "id": "/subscriptions/6c08572e-808d-4f00-8ffe-737498e52555/resourceGroups/rg-terraform-day1/providers/Microsoft.Network/virtualNetworks/vnet-day2",
            "location": "eastus",
            "name": "vnet-day2",
            "resource_group_name": "rg-terraform-day1",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/6c08572e-808d-4f00-8ffe-737498e52555/resourceGroups/rg-terraform-day1/providers/Microsoft.Network/virtualNetworks/vnet-day2/subnets/subnet-day2",
                "name": "subnet-day2",
                "security_group": "/subscriptions/6c08572e-808d-4f00-8ffe-737498e52555/resourceGroups/rg-terraform-day1/providers/Microsoft.Network/networkSecurityGroups/nsg-day2"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}